--- a/app/src/main/res/layout/activity_book_trainer_center_details.xml
+++ b/app/src/main/res/layout/activity_book_trainer_center_details.xml
@@ -206,7 +206,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:paddingTop="@dimen/dimen_10"
-                        android:background="@color/colorAgeBg"
+                        android:background="@color/colorBackground"
                         android:paddingBottom="@dimen/dimen_30">
 
                         <TextView
@@ -539,7 +539,7 @@
 
 
             <RelativeLayout
-                android:background="@color/colorAgeBg"
+                android:background="@color/colorBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
