--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -90,26 +90,25 @@
 
                  </RelativeLayout>
 
-                 <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
-                     android:id="@+id/dietPlanCalenderView"
+
+                 <devs.mulham.horizontalcalendar.HorizontalCalendarView
+                     android:id="@+id/calendarView"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:layout_marginStart="16dp"
-                     android:layout_marginTop="16dp"
-                     android:layout_marginEnd="16dp"
-                     app:deselection="false"
-                     app:layout_constraintEnd_toEndOf="parent"
-                     app:layout_constraintStart_toStartOf="parent"
-                     app:longPress="false"
-                     app:multiSelection="false"
-                     tools:ignore="MissingConstraints" />
+                     app:selectorColor="@android:color/transparent"
+                     app:selectedDateBackground="@drawable/add_diet_plan"
+                     app:textColorSelected="@color/colorPrimary"
+                     app:sizeTopText="@dimen/font_12sp"
+                     app:sizeBottomText="12sp"
+                     app:sizeMiddleText="14sp"/>
+
 
                  <LinearLayout
                      android:id="@+id/lnrMyWorkout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
-                     android:visibility="visible"
+                     android:visibility="gone"
                      android:layout_marginStart="@dimen/margin_16dp"
                      android:layout_marginEnd="@dimen/margin_16dp"
                      android:background="@drawable/rating_bg"
@@ -268,7 +267,7 @@
                                      android:id="@+id/tvDietConsumedProtien"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_9sp"
@@ -285,7 +284,7 @@
                                      android:id="@+id/tvPlanProtien"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_12sp"
@@ -324,7 +323,7 @@
                                      android:id="@+id/tvDietConsumedCabs"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_9sp"
@@ -341,7 +340,7 @@
                                      android:id="@+id/tvPlanCabs"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_12sp"
@@ -378,7 +377,7 @@
                                      android:id="@+id/tvDietConsumedFat"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_9sp"
@@ -395,7 +394,7 @@
                                      android:id="@+id/tvPlanFat"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_12sp"
@@ -432,7 +431,7 @@
                                      android:id="@+id/tvDietConsumedCalories"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_9sp"
@@ -449,7 +448,7 @@
                                      android:id="@+id/tvPlanCalories"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
-                                     android:text="60kg"
+                                     android:text=""
                                      android:textColor="@color/white"
                                      android:maxLines="1"
                                      android:textSize="@dimen/font_12sp"
