--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -96,18 +96,17 @@
 
                     </RelativeLayout>
 
-                    <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
-                        android:id="@+id/main_workout_single_row_calendar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        app:includeCurrentDate="true"
-                        app:deselection="false"
-                        app:longPress="false"
-                        app:multiSelection="false"
-                        tools:ignore="MissingConstraints" />
+                  <devs.mulham.horizontalcalendar.HorizontalCalendarView
+                      android:id="@+id/calendarView"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      app:selectorColor="@android:color/transparent"
+                      app:selectedDateBackground="@drawable/add_diet_plan"
+                      app:textColorSelected="@color/colorPrimary"
+                      app:sizeTopText="@dimen/font_12sp"
+                      app:sizeBottomText="12sp"
+                      app:sizeMiddleText="14sp"/>
+
 
                     <LinearLayout
                         android:id="@+id/lnrMyWorkout"
@@ -273,7 +272,7 @@
                                         android:id="@+id/tvDietConsumedProtien"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_9sp"
@@ -290,7 +289,7 @@
                                         android:id="@+id/tvPlanProtien"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_12sp"
@@ -329,7 +328,7 @@
                                         android:id="@+id/tvDietConsumedCabs"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_9sp"
@@ -346,7 +345,7 @@
                                         android:id="@+id/tvPlanCabs"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_12sp"
@@ -383,7 +382,7 @@
                                         android:id="@+id/tvDietConsumedFat"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_9sp"
@@ -400,7 +399,7 @@
                                         android:id="@+id/tvPlanFat"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_12sp"
@@ -437,7 +436,7 @@
                                         android:id="@+id/tvDietConsumedCalories"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_9sp"
@@ -454,7 +453,7 @@
                                         android:id="@+id/tvPlanCalories"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="60kg"
+                                        android:text=""
                                         android:textColor="@color/white"
                                         android:maxLines="1"
                                         android:textSize="@dimen/font_12sp"
