--- a/app/src/main/res/drawable/rect_gym_center_selected.xml
+++ b/app/src/main/res/drawable/rect_gym_center_selected.xml
@@ -7,4 +7,8 @@
     <stroke android:color="@color/colorPrimary"
         android:width="0.8dp"/>
 
+    <solid
+        android:color="@color/white">
+    </solid>
+
 </shape>
