--- a/app/src/main/res/drawable/rect_gym_center_un_selected.xml
+++ b/app/src/main/res/drawable/rect_gym_center_un_selected.xml
@@ -5,8 +5,10 @@
         android:radius="8dp"
         />
 
-    <stroke android:color="@color/colorWhite"
+    <stroke android:color="@color/colorBackground"
         android:width="1dp"/>
 
-
+  <solid
+      android:color="@color/colorBackground">
+  </solid>
 </shape>
