--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -48,13 +48,24 @@
                         android:layout_marginTop="@dimen/margin_8dp"
                         android:orientation="horizontal">
 
-                        <com.github.siyamed.shapeimageview.RoundedImageView
-                            android:id="@+id/ivCenterImage"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:siBorderColor="@color/white"
-                            android:src="@drawable/user"
-                            app:siRadius="@dimen/dimen_10" />
+                        <LinearLayout
+                            android:background="@drawable/rating_bg"
+                            android:layout_width="@dimen/dimen_120"
+                            android:id="@+id/lnrCenter"
+                            android:layout_height="@dimen/dimen_120"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:padding="@dimen/dimen_7"
+                            android:backgroundTint="@color/colorBranchBg1">
+
+                            <ImageView
+                                android:id="@+id/ivCenterImage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/user"/>
+                        </LinearLayout>
+
+
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -394,7 +405,7 @@
 
 
                 <LinearLayout
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:id="@+id/llPersonalTrainer"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -753,6 +764,7 @@
                 android:textAllCaps="false"/>
 
             <TextView
+                android:id="@+id/btnBookingReview"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
