--- a/app/src/main/res/layout/activity_booking_summary.xml
+++ b/app/src/main/res/layout/activity_booking_summary.xml
@@ -288,11 +288,10 @@
 
                  <LinearLayout
                      android:layout_width="match_parent"
-                     android:background="@color/colorAgeBg"
+                     android:background="@color/colorBackground"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_16dp"
                      android:layout_marginBottom="@dimen/margin_8dp"
-
                      android:padding="@dimen/dimen_7"
                      android:orientation="vertical">
 
@@ -371,7 +370,7 @@
                      android:id="@+id/llContent"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
-                     android:background="@color/colorAgeBg"
+                     android:background="@color/colorBackground"
                      android:orientation="vertical">
 
 
