--- a/app/src/main/res/layout/activity_trainer_details.xml
+++ b/app/src/main/res/layout/activity_trainer_details.xml
@@ -66,7 +66,6 @@
                 </LinearLayout>
 
                 <LinearLayout
-
                     android:background="@drawable/dialog_curve_bg"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -206,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:paddingTop="@dimen/dimen_10"
-                        android:background="@color/colorAgeBg"
+                        android:background="@color/colorBackground"
                         android:paddingBottom="@dimen/dimen_30">
 
                         <TextView
@@ -269,6 +268,7 @@
 
 
                             <TextView
+                                android:id="@+id/tvPrivacy_policy"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
@@ -539,7 +539,7 @@
 
 
             <RelativeLayout
-                android:background="@color/colorAgeBg"
+                android:background="@color/colorBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
