--- a/app/src/main/res/layout/drawer_menu.xml
+++ b/app/src/main/res/layout/drawer_menu.xml
@@ -27,17 +27,35 @@
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/diva_place_holder" />
 
-            <TextView
-                android:id="@+id/tvUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical"
-                android:layout_marginStart="@dimen/dimen_10"
-                android:text="Rehab"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_16sp"
-                android:fontFamily="@font/avenir_black"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/margin_8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tvUserName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:layout_marginStart="@dimen/dimen_10"
+                    android:text="Rehab"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_16sp"
+                    android:fontFamily="@font/avenir_black"/>
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/avenir_light"
+                    android:text="App Version 1.2"
+                    android:textSize="@dimen/font_12sp"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    style="@style/MenuText"/>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
@@ -364,6 +382,47 @@
                             android:layout_marginTop="15dp"
                             android:layout_marginEnd="@dimen/dimen_50"
                             android:background="@color/white"
+                            android:visibility="visible"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/btnLogout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/dimen_20"
+                        android:layout_height="@dimen/dimen_20"
+                        app:tint="@color/colorWhite"
+                        android:layout_marginTop="@dimen/margin_4dp"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/logout" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:paddingStart="10dp"
+                        android:paddingTop="10dp">
+
+                        <TextView
+                            android:layout_gravity="start"
+                            android:fontFamily="@font/avenir_light"
+                            android:text="@string/logout"
+                            android:textAlignment="viewStart"
+                            style="@style/MenuText"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="@dimen/dimen_50"
+                            android:background="@color/white"
                             android:visibility="gone"/>
 
                     </LinearLayout>
@@ -386,16 +445,36 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true">
 
-        <TextView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_gravity="center"
-            android:fontFamily="@font/avenir_light"
-            android:text="App Version 1.2"
-            android:textAlignment="center"
             android:gravity="center"
-            style="@style/MenuText"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:fontFamily="@font/avenir_light"
+                android:text="@string/poweredby_htf"
+                android:gravity="center"
+                />
+
+            <ImageView
+                android:layout_marginStart="@dimen/margin_8dp"
+                android:layout_width="@dimen/dimen_40"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/white_htf" />
+
+
+        </LinearLayout>
+
 
         <Button
-            android:id="@+id/btnLogout"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_10"
@@ -405,6 +484,7 @@
             android:layout_marginEnd="@dimen/dimen_70"
             android:layout_gravity="center"
             android:gravity="center"
+            android:visibility="gone"
             android:fontFamily="@font/avenir_black"
             android:paddingStart="@dimen/margin_4dp"
             android:paddingTop="@dimen/margin_12dp"
