view Direction and trainer review rating done

--- a/app/src/main/res/layout/activity_book_trainer_center_details.xml
+++ b/app/src/main/res/layout/activity_book_trainer_center_details.xml
@@ -124,6 +124,7 @@
 
 
                         <LinearLayout
+                            android:id="@+id/ll_rating_review"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -269,6 +270,7 @@
 
 
                             <TextView
+                                android:id="@+id/tvPrivacy_policy"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
