--- a/app/src/main/res/layout/layout_booking_review.xml
+++ b/app/src/main/res/layout/layout_booking_review.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rlMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,12 +32,13 @@
                 app:siRadius="@dimen/dimen_30" />
 
             <TextView
+                android:id="@+id/tvTrainerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textSize="@dimen/font_14sp"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:text="@string/personal_trainer"
+                android:text=""
                 android:textColor="@color/colorTextLightDark"
                 android:fontFamily="@font/avenir_black">
             </TextView>
@@ -95,7 +97,8 @@
                 android:textAlignment="viewStart"
                 android:fontFamily="@font/avenir_light"
                 android:textColor="@color/colorTextHeading"
-                android:textSize="@dimen/font_12sp" />
+                android:textSize="@dimen/font_12sp"
+                tools:ignore="RtlSymmetry" />
 
             <View
                 android:background="@color/colorTextLightDark"
