--- a/app/src/main/res/layout/activity_center_detail_booking.xml
+++ b/app/src/main/res/layout/activity_center_detail_booking.xml
@@ -119,6 +119,7 @@
 
 
                         <TextView
+                            android:id="@+id/tvPrivacy_policy"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
