--- a/app/src/main/res/layout/activity_trainer_details.xml
+++ b/app/src/main/res/layout/activity_trainer_details.xml
@@ -123,6 +123,7 @@
 
 
                         <LinearLayout
+                            android:id="@+id/ll_rating_review"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
