--- a/app/src/main/res/layout/row_completed_booking.xml
+++ b/app/src/main/res/layout/row_completed_booking.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="completedBookingModel"
-            type="com.htf.diva.models.CompletedBookingModel" />
+            type="com.htf.diva.models.UpComingBookingModel" />
         <import type="android.view.View"/>
     </data>
 
